# Geant4-MR_LINAC

./: CMakeLists.txt  README.md  mrlinac.cpp
headers/: DetectorConstruction.hh  MagneticField.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
sources/: DetectorConstruction.cpp  MagneticField.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp
